crates/plotnik-tests/tests/macro_diagnostics/fail/unknown_node_kind.rs
// Bind-stage diagnostics (grammar mismatches) render the same way.

plotnik::query! {
    grammar = "arborium-javascript",
    "Q = (program (no_such_node_kind) @x)"
}

fn main() {}
